Updated personal message
to match with 16th line text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="box">
         <p>If life gives you lemons</p>
-        <p>Pigeons are great pets</p>
+        <p>give them pigeons</p>
     </div>
 </div>
 </body>
